Changed BeerDisplay prop names to be more generic. Put an Add button in both the Search and BeerDisplay pages. Added animation for Add button. Fixed spacing issue with title and Add buttons.

--- a/client/src/components/styles/BeerDisplay.module.css
+++ b/client/src/components/styles/BeerDisplay.module.css
@@ -10,13 +10,15 @@
   border-radius: 1rem;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
-.DisplayContainer h1 {
+.BeersTitle {
   width: 100%;
   font-size: 5rem;
   padding: 2rem;
   padding-bottom: 1rem;
   background: black;
   color: white;
+  display: flex;
+  justify-content: space-between;
 }
 .DisplayContainer h2 {
   font-size: 2rem;
@@ -47,11 +49,55 @@
   transform: scale(1.05);
   transition: 0.25s;
 }
-.EditIcon {
-  z-index: 10;
-  color: #757575;
+.AddIcon {
+  font-size: 2rem;
+  margin-right: 4rem;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 10rem;
+  background: #00a5ff;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
-.DeleteIcon {
-  color: #757575;
+.AddIcon:hover {
+  -webkit-animation: rotate-center 0.5s both;
+	        animation: rotate-center 0.5s both;
 }
+
+/* ----------------------------------------------
+ * Generated by Animista on 2020-3-22 19:15:39
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+/**
+ * ----------------------------------------
+ * animation rotate-center
+ * ----------------------------------------
+ */
+ @-webkit-keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
 
