--- a/client/src/pages/styles/Search.module.css
+++ b/client/src/pages/styles/Search.module.css
@@ -30,3 +30,53 @@
 .CustomerContainer {
   margin: 5rem;
 }
+.AddIcon {
+  font-size: 2rem;
+  margin-right: 4rem;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 10rem;
+  background: #00a5ff;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.AddIcon:hover {
+  -webkit-animation: rotate-center 0.5s both;
+	        animation: rotate-center 0.5s both;
+}
+
+/* ----------------------------------------------
+ * Generated by Animista on 2020-3-22 19:15:39
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+/**
+ * ----------------------------------------
+ * animation rotate-center
+ * ----------------------------------------
+ */
+ @-webkit-keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
